reset css e outras tentativas

--- a/project/pages/links.html
+++ b/project/pages/links.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
     </style>
     <title>Amar Divas: Página de Links</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/buttonefects.css">
     <link rel="stylesheet" href="../css/linkstyles.css">
 </head>
 </head>
@@ -19,18 +21,18 @@
     <header>
         <img src="../images/selo-emblema2.png" alt="Logo" class="logo">
         <h1>Amar Divas</h1>
-        <h3>Confira nossos Links</h3>
+        <h3>Confira nossos Links:</h3>
     </header>
    
     <section>
         <ul role="list">
             <li>
                 <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
-                    <button class="text-subscribe-button-XL">Inscreva-se no Grupo<br>Vôo das Borboletas</button>
+                    <button class="text-subscribe-button-XL">Inscreva-se no Grupo<br>Voo das Borboletas</button>
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="https://www.facebook.com/profile.php?id=100085018795190">
                     <button class="text-subscribe-button">Facebook</button>
                 </a>
             </li>
@@ -39,8 +41,16 @@
                     <button class="text-subscribe-button">Whattsapp</button>
                 </a>
             </li>
-            <li><button class="text-subscribe-button">Instagram</button></li>
-            <li><button class="text-subscribe-button">Nosso Site</button></li>
+            <li>
+                <a href="https://www.instagram.com/amardivas/">
+                    <button class="text-subscribe-button">Instagram</button>
+                </a>
+            </li>
+            <li>
+                <a href="http://amardivas.com.br">
+                    <button class="text-subscribe-button">Nosso Site</button>
+                </a>
+            </li>
         </ul>
     </section>
     <div class="container2">
