alinhamento media query

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -18,14 +18,14 @@
             <header><img src="../images/Marca.png" alt="Logo" class="logo"></header>
             <div class="row">
                 <div class="col-md-2">
-                    <section>
-                        <div class="round-button">
+                    <section class="round-buttons">
+                        <div class="round-button" id="1">
                             <img src="../images/06fundotransparente1.png" alt="Button 1">
                         </div>
-                        <div class="round-button">
+                        <div class="round-button" id="2">
                             <img src="../images/01fundotransparente.png" alt="Button 2">
                         </div>
-                        <div class="round-button">
+                        <div class="round-button" id="3">
                             <img src="../images/03fundotransparente1.png" alt="Button 3">
                         </div>
                     </section>
@@ -37,7 +37,7 @@
                             em um ato de amor por você e pelo nosso planeta.</p>
                         <p>Sua inscrição no <span class="colored-word">Evento
                                 <strong>Voo da Borboleta: Aprendendo a Amar-se
-                                    como uma Diva</strong>&nb</span>não é apenas um
+                                    como uma Diva</strong>&nbsp;</span>não é apenas um
                             passo, é um pacto de <span class="colored-word">amor-próprio</span>
                             e <span class="colored-word">sustentabilidade.</span></p>
                     </div>
