criação de layout alternativo

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -15,10 +15,12 @@
 <body>
     <div class="background-image">
         <div class="container">
-            <header><img src="../images/Marca.png" alt="Logo" class="logo"></header>
+            <header>
+                <img src="../images/Marca.png" alt="Logo" class="logo">
+            </header>
             <div class="row">
-                <div class="col-md-2">
-                    <section class="round-buttons">
+                <section class="round-buttons">
+                    <div class="col-md-2">
                         <div class="round-button" id="1">
                             <img src="../images/06fundotransparente1.png" alt="Button 1">
                         </div>
@@ -28,8 +30,8 @@
                         <div class="round-button" id="3">
                             <img src="../images/03fundotransparente1.png" alt="Button 3">
                         </div>
-                    </section>
-                </div>
+                    </div>
+                </section>
                 <div class="col-md-6">
                     <div class="text-section">
                         <p><span class="colored-word">Junte-se a nós</span> e
