--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -42,7 +42,9 @@
                             e <span class="colored-word">sustentabilidade.</span></p>
                     </div>
                     <div class="row">
-                        <button class="text-subscribe-button">Inscreva-se</button>
+                        <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
+                            <button class="text-subscribe-button">Inscreva-se</button>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
