--- a/project/pages/links.html
+++ b/project/pages/links.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
+    <!--<link rel="stylesheet" href="../css/reset.css">-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
     </style>
@@ -14,47 +14,44 @@
     <link rel="stylesheet" href="../css/buttonefects.css">
 </head>
 </head>
+
 <body>
-    <div class="container">
-        <img src="../images/cornerimage-transp.png" alt="Imagem" class="corner-image">
-    </div>
-    <header>
-        <img src="../images/selo-emblema2.png" alt="Logo" class="logo">
-        <h1>Amar Divas</h1>
-        <h3>Confira nossos Links:</h3>
-    </header>
-   
-    <section>
-        <ul role="list">
-            <li>
-                <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
-                    <button class="text-subscribe-button-XL">Inscreva-se no Grupo<br>Voo das Borboletas</button>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/profile.php?id=100085018795190">
-                    <button class="text-subscribe-button">Facebook</button>
-                </a>
-            </li>
-            <li>
-                <a href="https://wa.me/558391415318">
-                    <button class="text-subscribe-button">Whattsapp</button>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/amardivas/">
-                    <button class="text-subscribe-button">Instagram</button>
-                </a>
-            </li>
-            <li>
-                <a href="http://amardivas.com.br">
-                    <button class="text-subscribe-button">Nosso Site</button>
-                </a>
-            </li>
-        </ul>
-    </section>
-    <div class="container2">
-        <img src="../images/cornerimage2-transp.png" alt="Imagem" class="corner-image2">
+    <div class="background-image">
+        <header>
+            <img src="../images/selo-emblema2.png" alt="Logo" class="logo">
+            <h1>Amar Divas</h1>
+            <h3>Confira nossos Links:</h3>
+        </header>
+        <section>
+            <ul role="list">
+                <li>
+                    <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
+                        <button class="text-subscribe-button-XL">Inscreva-se no Grupo<br>Voo das Borboletas</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100085018795190">
+                        <button class="text-subscribe-button-XL">Facebook</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/558391415318">
+                        <button class="text-subscribe-button-XL">Whatsapp</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/amardivas/">
+                        <button class="text-subscribe-button-XL">Instagram</button>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://amardivas.com.br">
+                        <button class="text-subscribe-button-XL">Nosso Site</button>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </div>
 </body>
+
 </html>
