--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -4,122 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fauna+One&family=Noto+Sans:wght@500&display=swap');
-    </style>
     <title>AmarDivas</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
-    <div class="background-image">
-        <div class="container">
-            <header><img src="../images/Marca.png" alt="Logo" class="logo"></header>
-            <div class="row">
-                <div class="col-md-2">
-                    <section class="round-buttons">
-                        <div class="round-button" id="1">
-                            <img src="../images/06fundotransparente1.png" alt="Button 1">
-                        </div>
-                        <div class="round-button" id="2">
-                            <img src="../images/01fundotransparente.png" alt="Button 2">
-                        </div>
-                        <div class="round-button" id="3">
-                            <img src="../images/03fundotransparente1.png" alt="Button 3">
-                        </div>
-                    </section>
-                </div>
-                <div class="col-md-6">
-                    <div class="text-section">
-                        <p><span class="colored-word">Junte-se a nós</span> e
-                            transforme sua <span class="colored-word">inscrição</span>
-                            em um ato de amor por você e pelo nosso planeta.</p>
-                        <p>Sua inscrição no <span class="colored-word">Evento
-                                <strong>Voo da Borboleta: Aprendendo a Amar-se
-                                    como uma Diva</strong>&nbsp;</span>não é apenas um
-                            passo, é um pacto de <span class="colored-word">amor-próprio</span>
-                            e <span class="colored-word">sustentabilidade.</span></p>
-                    </div>
-                    <div class="row">
-                        <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
-                            <button class="text-subscribe-button">Inscreva-se</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="">
-                        <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
-                    </div>
-                </div>
-            </div>           
+    <header>
+        <img src="../images/Marca.png" alt="Logo" class="logo">
+    </header>
+    <main class="background-image">
+        <aside class="round-buttons">
+            <div class="round-button" id="1">
+                <img src="../images/06fundotransparente1.png" alt="Button 1">
+            </div>
+            <div class="round-button" id="2">
+                <img src="../images/01fundotransparente.png" alt="Button 2">
+            </div>
+            <div class="round-button" id="3">
+                <img src="../images/03fundotransparente1.png" alt="Button 3">
+            </div>
+        </aside>
+
+        <div class="text-section">
+            <p><span class="colored-word">Junte-se a nós</span> e
+                transforme sua <span class="colored-word">inscrição</span>
+                em um ato de amor por você e pelo nosso planeta.</p>
+            <p>Sua inscrição no <span class="colored-word">Evento
+                    <strong>Voo da Borboleta: Aprendendo a Amar-se
+                        como uma Diva</strong>&nbsp;</span>não é apenas um
+                passo, é um pacto de <span class="colored-word">amor-próprio</span>
+                e <span class="colored-word">sustentabilidade.</span></p>
         </div>
-    </div>
+        <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
+    </main>
+        <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
+            <button class="text-subscribe-button">Inscreva-se</button>
+        </a>
+
     <footer class="footer">
-        <div class="row align-items-center">
-            <!-- Alinhar itens verticalmente -->
-            <div class="col-md-2">
-                <img src="../images/logohorizontal-transparente1.png" alt="Footer Logo" class="footer-logo">
-            </div>
-            <div class="col-md-7">
-                <div class="subscribe-section">
-                
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p style="color: white; width: max-content;">
-                                Junte-se ao nosso Newsletter e receba novidades em seu e-mail:
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-8">
-                            <input type="text" class="rounded-input" placeholder="Seu e-mail">
-                        </div>
-                        <div class="col-md-8">
-                            <button class="subscribe-button">Inscreva-se</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--<div class="col-md-1"></div>-->
-            <div class="col-md-3">
-                <div class="redes-sociais">
-                    <div class="row">
-                        <p>Nossas redes sociais</p>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="footer-round-button">
-                                <a href="https://www.facebook.com/profile.php?id=100085018795190" target="_blank">
-                                    <img src="../images/facebook-logo-white.png" alt="facebook">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="footer-round-button">
-                                <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
-                                    <img src="../images/Whats.png" alt="whattsapp">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="footer-round-button">
-                                <a href="https://www.instagram.com/amardivas/" target="_blank">
-                                    <img src="../images/Instagram.png" alt="instagram">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <!-- Alinhar itens verticalmente -->
+        <img src="../images/logohorizontal-transparente1.png" alt="Footer Logo" class="footer-logo">
+
+        <div class="subscribe-section">
+            <p style="color: white; width: max-content;">
+                Junte-se ao nosso Newsletter e receba novidades em seu e-mail:
+            </p>
+
+            <input type="text" class="rounded-input" placeholder="Seu e-mail">
+            <button class="subscribe-button">Inscreva-se</button>
         </div>
-        <div class="row align-items-center">
-            <div class="col-md-12">
-                <p class="direitos">2023® Amar Divas – Todos os direitos reservados. Endereço eletrônico:
-                    <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
-                </p>
+        <!--<div class="col-md-1"></div>-->
+
+        <div class="redes-sociais">
+
+            <p>Nossas redes sociais</p>
+
+            <div class="footer-round-button">
+                <a href="https://www.facebook.com/profile.php?id=100085018795190" target="_blank">
+                    <img src="../images/facebook-logo-white.png" alt="facebook">
+                </a>
             </div>
+
+            <div class="footer-round-button">
+                <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                    <img src="../images/Whats.png" alt="whattsapp">
+                </a>
+            </div>
+
+
+            <div class="footer-round-button">
+                <a href="https://www.instagram.com/amardivas/" target="_blank">
+                    <img src="../images/Instagram.png" alt="instagram">
+                </a>
+            </div>
+
         </div>
+
+        </div>
+
+        <p class="direitos">2023® Amar Divas – Todos os direitos reservados. Endereço eletrônico:
+            <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
+        </p>
+
     </footer>
 </body>
 
