--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -1,92 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AmarDivas</title>
+        <link rel="stylesheet" href="../css/styles.css">
+    </head>
+    <body>
+        <header>
+            <img src="../images/Marca.png" alt="Logo" class="logo">
+        </header>
+        <main class="background-image">
+            <aside class="round-buttons">
+                <div class="round-button" id="1">
+                    <img src="../images/06fundotransparente1.png" alt="Button 1">
+                </div>
+                <div class="round-button" id="2">
+                    <img src="../images/01fundotransparente.png" alt="Button 2">
+                </div>
+                <div class="round-button" id="3">
+                    <img src="../images/03fundotransparente1.png" alt="Button 3">
+                </div>
+            </aside>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmarDivas</title>
-    <link rel="stylesheet" href="../css/styles.css">
-</head>
-
-<body>
-    <header>
-        <img src="../images/Marca.png" alt="Logo" class="logo">
-    </header>
-    <main class="background-image">
-        <aside class="round-buttons">
-            <div class="round-button" id="1">
-                <img src="../images/06fundotransparente1.png" alt="Button 1">
+            <div class="text-section">
+                <h1><span class="colored-word">"Junte-se a nós</span> e
+                    transforme sua <span class="colored-word">inscrição</span>
+                    em um ato de amor por você e pelo nosso planeta."</h1>
+                <h2>Sua inscrição no <span class="colored-word">Evento
+                        <strong>Voo da Borboleta: Aprendendo a Amar-se
+                            como uma Diva</strong>&nbsp;</span>não é apenas um
+                    passo, é um pacto de <span class="colored-word">amor-próprio</span>
+                    e <span class="colored-word">sustentabilidade.</span></h2>
             </div>
-            <div class="round-button" id="2">
-                <img src="../images/01fundotransparente.png" alt="Button 2">
-            </div>
-            <div class="round-button" id="3">
-                <img src="../images/03fundotransparente1.png" alt="Button 3">
-            </div>
-        </aside>
-
-        <div class="text-section">
-            <p><span class="colored-word">Junte-se a nós</span> e
-                transforme sua <span class="colored-word">inscrição</span>
-                em um ato de amor por você e pelo nosso planeta.</p>
-            <p>Sua inscrição no <span class="colored-word">Evento
-                    <strong>Voo da Borboleta: Aprendendo a Amar-se
-                        como uma Diva</strong>&nbsp;</span>não é apenas um
-                passo, é um pacto de <span class="colored-word">amor-próprio</span>
-                e <span class="colored-word">sustentabilidade.</span></p>
-        </div>
-        <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
-    </main>
+            <img src="../images/LOGO.png" alt="Circle Logo" class="circle-logo">
+        </main>
         <a href="https://chat.whatsapp.com/BrOMyv4ZNdJKe6cG9F5BUZ">
             <button class="text-subscribe-button">Inscreva-se</button>
         </a>
 
-    <footer class="footer">
-        <!-- Alinhar itens verticalmente -->
-        <img src="../images/logohorizontal-transparente1.png" alt="Footer Logo" class="footer-logo">
+        <footer>
+            <img src="../images/logohorizontal-transparente1.png"
+                alt="Footer Logo" class="footer-logo">
+            <div class="email">
+                <h3>Junte-se ao nosso Newsletter e receba</h3>
+                <h3>novidades em seu e-mail:</h3>
+                <div class="subscribe">
+                    <input type="text" class="rounded-input"
+                        placeholder="Seu e-mail">
+                    <button class="subscribe-button">Inscreva-se</button>
+                </div>
 
-        <div class="subscribe-section">
-            <p style="color: white; width: max-content;">
-                Junte-se ao nosso Newsletter e receba novidades em seu e-mail:
-            </p>
-
-            <input type="text" class="rounded-input" placeholder="Seu e-mail">
-            <button class="subscribe-button">Inscreva-se</button>
-        </div>
-        <!--<div class="col-md-1"></div>-->
-
-        <div class="redes-sociais">
-
-            <p>Nossas redes sociais</p>
-
-            <div class="footer-round-button">
-                <a href="https://www.facebook.com/profile.php?id=100085018795190" target="_blank">
+            </div>
+            <div class="redes-sociais">
+                <h3>Nossas redes sociais</h3>
+                <a
+                    href="https://www.facebook.com/profile.php?id=100085018795190"
+                    target="_blank">
                     <img src="../images/facebook-logo-white.png" alt="facebook">
                 </a>
-            </div>
-
-            <div class="footer-round-button">
-                <a href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!" target="_blank">
+                <a
+                    href="https://api.whatsapp.com/send?phone=5583991415318&text=Olá,%20Diva!"
+                    target="_blank">
                     <img src="../images/Whats.png" alt="whattsapp">
                 </a>
-            </div>
-
-
-            <div class="footer-round-button">
                 <a href="https://www.instagram.com/amardivas/" target="_blank">
                     <img src="../images/Instagram.png" alt="instagram">
                 </a>
             </div>
 
-        </div>
-
-        </div>
-
-        <p class="direitos">2023® Amar Divas – Todos os direitos reservados. Endereço eletrônico:
-            <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
-        </p>
-
-    </footer>
-</body>
-
+            <div class="direitos">
+                <p>2023® Amar Divas – Todos os direitos reservados. Endereço
+                    eletrônico:</p>
+                <a href="https://www.amardivas.com.br" target="_blank">https://www.amardivas.com.br</a>
+            </div>
+        </footer>
+    </body>
 </html>
